# LearningForOptimizing

./: .gitignore  .scalafmt.conf  README.md  build.sbt  defaults.txt  forbidden.txt  parameters.txt  pyproject.toml  results-fine-tuning-dqn  results-fine-tuning-epsilon-csp  results-fine-tuning-ucb-csp  results-worse-tuning-dqn  scenario.txt  target-runner
bks/: csp_bks.csv  pdptw_bks.csv
examples/: NOTE.txt  parameters.txt  scenario.txt  target-runner  testing100.txt  testing400.txt  testing600.txt  testing800.txt  training200.txt  training400.txt
irace/: defaults-dqn.txt  defaults-epsilongreedy.txt  defaults-ucb.txt  parameters-dqn.txt  parameters-epsilongreedy.txt  parameters-ucb.txt  parameters.txt  scenario-csp-epsilon.txt  scenario-csp-epsilongreedy.txt  scenario-csp-ucb.txt  scenario-pdptw-dqn.txt  scenario-pdptw-epsilon.txt  scenario-pdptw-epsilongreedy.txt  scenario-pdptw-ucb.txt  scenario.txt  target-runner  target-runner-csp  target-runner-pdptw
pdptw-epsilongreedy-arena/: irace.Rdata
pdptw-ucb-arena/: irace.Rdata
results/: csp-all-results.csv  pdptw_2023-09-12_23_25_43_results.csv  pdptw_2023-09-13_10_55_58_results.csv  pdptw_all-results.csv
xp/: 2023-12-04_15_38_34_5d1b22f_results.csv  csp_run_one_instance.sh  csp_run_parallel.sh  irace_tuning.sh  irace_ucb_pdptw_tuning.sh  pdptw_2024-08-29_17_25_17_ac9c77b_results.csv  pdptw_2024-09-04_14_21_04_47d2af5_results.csv  pdptw_2024-09-05_18_16_47_a3a3161_results.csv  pdptw_2024-09-05_18_20_47_a3a3161_results.csv  pdptw_2024-09-05_20_12_04_53f301d_results.csv  pdptw_run_one_instance.sh  results-tuned.csv  (+4 more)
(+129 files in other folders)
