[project]
name = "learningforoptimizing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.0",
    "torch-scatter>=2.1.2",
    "numpy>=2.1.0",
    "python-dotenv",
    "torch-geometric>=2.5.3",
    "icecream>=2.1.3",
    "sumtree>=0.2.7",
    "wandb>=0.17.8",
    "py4j>=0.10.9.7",
    "typed-argparse>=0.3.1",
    "polars>=1.6.0",
    "matplotlib>=3.9.2",
    "altair>=5.4.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/python"]
